[gd_scene load_steps=3 format=3 uid="uid://dj7rp7ql5qp08"]

[ext_resource type="Script" path="res://addons/dialogue_nodes/nodes/forkNode.gd" id="1_yngwo"]
[ext_resource type="PackedScene" uid="uid://nfp4t2r7wfhi" path="res://addons/dialogue_nodes/nodes/sub_nodes/ForkOption.tscn" id="2_rmans"]

[node name="ForkNode" type="GraphNode"]
offset_right = 261.0
offset_bottom = 127.0
size_flags_horizontal = 4
size_flags_vertical = 4
title = "ForkNode"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(0.678431, 1, 0.184314, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(0.678431, 1, 0.184314, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(0.678431, 1, 0.184314, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(0.678431, 1, 0.184314, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_yngwo")

[node name="LabelContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="LineEdit" parent="LabelContainer"]
layout_mode = 2
placeholder_text = "Fork Title"

[node name="HSeparator" type="HSeparator" parent="LabelContainer"]
layout_mode = 2

[node name="ResizeTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="DefaultOption" parent="." instance=ExtResource("2_rmans")]
unique_name_in_owner = true
layout_mode = 2

[node name="LineEdit" parent="DefaultOption" index="1"]
text = "Default Option"
editable = false

[node name="ForkOption1" parent="." instance=ExtResource("2_rmans")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="timeout" from="ResizeTimer" to="." method="_on_resize_timer_timeout"]

[editable path="DefaultOption"]
